--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -9,7 +9,7 @@
                     {% else %}
                         <a href="{{ path('app_login')}}">Se connecter</a>
                         <a href="{{ path('app_how_to')}}">Comment ça marche</a>
-                        <a href="{{ path('app_catalog')}}">Catalogue</a>
+                       
                       
                     
                     {% endif %}            
@@ -28,8 +28,15 @@
             </main>
 
             <footer>
-            <a href="{{ path('platon_main_cgu')}}">CGU</a>
-            <a href="{{ path('platon_main_contact')}}">Contact</a>
+
+            <a href="{{ path('platon_quisommesnous')}}">Qui sommes nous?</a>
+            <a href="{{ path('platon_mentionslegales')}}">Mentions légales</a>
+            <a href="{{ path('platon_cgu')}}">CGU</a>
+            <a href="{{ path('platon_contact')}}">Contact</a>
+            <a href="{{ path('platon_informationslegales')}}">Informations légales</a>
+            <a href="{{ path('platon_parametresdescookies')}}">Paramètres des cookies</a>
+            <a href="{{ path('platon_lachartedeplaton')}}">la charte de platon</a>
+            
 
             
 
