sauvegarde de fin de journée

--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -15,7 +15,11 @@
     </head>
     <body>
         {% block body %}
-        <h1>Hello world !</h1>
+        <h1>Bonjour {{app.user.prenom}}</h1>
+
+        <div>
+            
+        </div>
         {% endblock %}
     </body>
 </html>
