--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -1,4 +1,6 @@
 {% extends "base.html.twig" %}
+
+
    
         {% block body %}
             <header>
@@ -29,18 +31,17 @@
 
             <footer>
 
-            <a href="{{ path('platon_quisommesnous')}}">Qui sommes nous?</a>
+            {# <a href="{{ path('platon_quisommesnous')}}">Qui sommes nous?</a>
             <a href="{{ path('platon_mentionslegales')}}">Mentions légales</a>
             <a href="{{ path('platon_cgu')}}">CGU</a>
             <a href="{{ path('platon_contact')}}">Contact</a>
             <a href="{{ path('platon_informationslegales')}}">Informations légales</a>
             <a href="{{ path('platon_parametresdescookies')}}">Paramètres des cookies</a>
-            <a href="{{ path('platon_lachartedeplaton')}}">la charte de platon</a>
+            <a href="{{ path('platon_lachartedeplaton')}}">la charte de platon</a> #}
             
-
-            
-
             </footer>
         {% endblock %}
+    
+
     
 
