--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -7,7 +7,12 @@
         <div class="alert alert-danger" role="alert">{{ flash_error }}</div>
     {% endfor %}
 
-    <h1>Register</h1>
+    <section id="inscription">
+
+      <div class="container">
+
+        <form action="" class="offset-md-3 col-md-6 col-12 formulaire">
+          <h2>Inscription</h2>
 
     {{ form_start(registrationForm) }}
         {{ form_row(registrationForm.email) }}
