--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -3,7 +3,8 @@
 {% block title %}Log in!{% endblock %}
 
 {% block body %}
-<form method="post">
+
+<form method="post" >
     {% if error %}
         <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
     {% endif %}
@@ -12,17 +13,35 @@
         <div class="mb-3">
             You are logged in as {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
         </div>
+
     {% endif %}
 
-    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-    <label for="inputEmail">Email</label>
-    <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
-    <label for="inputPassword">Password</label>
-    <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
+   <h2>Connexion</h2>
+
+    <input type="email" value="{{ last_username }}" name="email" id="email" placeholder="Adresse mail *" size="30" />
+
+    {# <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus> #}
+
+    <input type="password" name="pass" id="pass" placeholder="Mot de passe *" size="30" />
+{# 
+    <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required> #}
+
+    <a class="mdp" href="#">Mot de passe oublié ?</a>
 
     <input type="hidden" name="_csrf_token"
            value="{{ csrf_token('authenticate') }}"
     >
+
+    <div class="d-flex justify-content-between">
+        <button class="inscription" type="submit">S'inscrire</button>
+
+        {# <a class="btn shadow connexion" href="#">Connexion</a> #}
+        
+
+        <button class="btn shadow connexion" type="submit">
+        Connexion
+        </button>
+      </div>
 
     {#
         Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
@@ -35,8 +54,8 @@
         </div>
     #}
 
-    <button class="btn btn-lg btn-primary" type="submit">
+    {# <button class="btn btn-lg btn-primary" type="submit">
         Sign in
-    </button>
+    </button> #}
 </form>
 {% endblock %}
