--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -1,47 +1,41 @@
 {% extends "base.html.twig" %}
 
 
-   
-        {% block body %}
-            <header>
-                <nav>
-                    {% if is_granted('ROLE_USER') %}
-                        <p>Bonjour {{app.user.prenom}}</p>
-                        <a href="{{ path('app_logout') }}">Déconnexion</a>
-                    {% else %}
-                        <a href="{{ path('app_login')}}">Se connecter</a>
-                        <a href="{{ path('app_how_to')}}">Comment ça marche</a>
-                       
-                      
-                    
-                    {% endif %}            
-                </nav>
-                        <a href="{{ path('app_register')}}">Inscription</a>
-                        
-            </header>
+{% block body %}
+	<header>
+		<nav>
+			{% if is_granted('ROLE_USER') %}
+				<p>Bonjour
+					{{app.user.prenom}}</p>
+				<a href="{{ path('app_logout') }}">Déconnexion</a>
+			{% else %}
+				<a href="{{ path('app_login')}}">Se connecter</a>
+				<a href="{{ path('app_how_to')}}">Comment ça marche</a>
 
-            
 
-            <main>
+			{% endif %}
+		</nav>
+		<a href="{{ path('app_register')}}">Inscription</a>
 
-                {% block innerContent %}
-                {% endblock %}
+	</header>
 
-            </main>
 
-            <footer>
+	<main>
 
-            {# <a href="{{ path('platon_quisommesnous')}}">Qui sommes nous?</a>
-            <a href="{{ path('platon_mentionslegales')}}">Mentions légales</a>
-            <a href="{{ path('platon_cgu')}}">CGU</a>
-            <a href="{{ path('platon_contact')}}">Contact</a>
-            <a href="{{ path('platon_informationslegales')}}">Informations légales</a>
-            <a href="{{ path('platon_parametresdescookies')}}">Paramètres des cookies</a>
-            <a href="{{ path('platon_lachartedeplaton')}}">la charte de platon</a> #}
-            
-            </footer>
-        {% endblock %}
-    
+		{% block innerContent %}{% endblock %}
 
-    
+	</main>
 
+	<footer>
+
+		<a href="{{ path('platon_quisommesnous')}}">Qui sommes nous?</a>
+		<a href="{{ path('platon_mentionslegales')}}">Mentions légales</a>
+		<a href="{{ path('platon_cgu')}}">CGU</a>
+		<a href="{{ path('platon_contact')}}">Contact</a>
+		<a href="{{ path('platon_informationslegales')}}">Informations légales</a>
+		<a href="{{ path('platon_parametresdescookies')}}">Paramètres des cookies</a>
+		<a href="{{ path('platon_lachartedeplaton')}}">la charte de platon</a>
+		#}
+
+	</footer>
+{% endblock %}
