--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,61 +1,62 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Log in!{% endblock %}
+{% block title %}Log in!
+{% endblock %}
 
 {% block body %}
 
-<form method="post" >
-    {% if error %}
-        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-    {% endif %}
+	<form method="post">
+		{% if error %}
+			<div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+		{% endif %}
 
-    {% if app.user %}
-        <div class="mb-3">
-            You are logged in as {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
-        </div>
+		{% if app.user %}
+			<div class="mb-3">
+				You are logged in as
+				{{ app.user.username }},
+				<a href="{{ path('app_logout') }}">Logout</a>
+			</div>
 
-    {% endif %}
+		{% endif %}
 
-   <h2>Connexion</h2>
+		<h2>Connexion</h2>
 
-    <input type="email" value="{{ last_username }}" name="email" id="email" placeholder="Adresse mail *" size="30" />
+		<input
+		type="email" value="{{ last_username }}" name="email" id="inputEmail" placeholder="Adresse mail *" size="30" autocomplete="email" required autofocus/>
 
-    {# <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus> #}
+		{# <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus> #}
 
-    <input type="password" name="pass" id="pass" placeholder="Mot de passe *" size="30" />
-{# 
-    <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required> #}
+		<input
+		type="password" name="pass" id="inputPassword" placeholder="Mot de passe *" size="30" autocomplete="current-password" required/>
+		{# 
+						    <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required> #}
 
-    <a class="mdp" href="#">Mot de passe oublié ?</a>
+		<a class="mdp" href="#">Mot de passe oublié ?</a>
 
-    <input type="hidden" name="_csrf_token"
-           value="{{ csrf_token('authenticate') }}"
-    >
+		<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
 
-    <div class="d-flex justify-content-between">
-        <button class="inscription" type="submit">S'inscrire</button>
+		<div class="d-flex justify-content-between">
+			<button class="inscription" type="submit">S'inscrire</button>
 
-        {# <a class="btn shadow connexion" href="#">Connexion</a> #}
-        
+			{# <a class="btn shadow connexion" href="#">Connexion</a> #}
 
-        <button class="btn shadow connexion" type="submit">
-        Connexion
-        </button>
-      </div>
 
-    {#
-        Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-        See https://symfony.com/doc/current/security/remember_me.html
+			<button class="btn shadow connexion" type="submit">Connexion</button>
+		</div>
 
-        <div class="checkbox mb-3">
-            <label>
-                <input type="checkbox" name="_remember_me"> Remember me
-            </label>
-        </div>
-    #}
+		{#
+						        Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
+						        See https://symfony.com/doc/current/security/remember_me.html
+						
+						        <div class="checkbox mb-3">
+						            <label>
+						                <input type="checkbox" name="_remember_me"> Remember me
+						            </label>
+						        </div>
+						    #}
 
-    {# <button class="btn btn-lg btn-primary" type="submit">
-        Sign in
-    </button> #}
-</form>
+		{# <button class="btn btn-lg btn-primary" type="submit">
+						        Sign in
+						    </button> #}
+	</form>
 {% endblock %}
