--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -29,14 +29,14 @@
 		<input
 		type="password" name="pass" id="inputPassword" placeholder="Mot de passe *" size="30" autocomplete="current-password" required/>
 		{# 
-						    <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required> #}
+								    <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required> #}
 
 		<a class="mdp" href="#">Mot de passe oublié ?</a>
 
 		<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
 
 		<div class="d-flex justify-content-between">
-			<button class="inscription" type="submit">S'inscrire</button>
+			<a class="inscription" href="{{ path('app_register') }}">S'inscrire</a>
 
 			{# <a class="btn shadow connexion" href="#">Connexion</a> #}
 
@@ -45,18 +45,18 @@
 		</div>
 
 		{#
-						        Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-						        See https://symfony.com/doc/current/security/remember_me.html
-						
-						        <div class="checkbox mb-3">
-						            <label>
-						                <input type="checkbox" name="_remember_me"> Remember me
-						            </label>
-						        </div>
-						    #}
+								        Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
+								        See https://symfony.com/doc/current/security/remember_me.html
+								
+								        <div class="checkbox mb-3">
+								            <label>
+								                <input type="checkbox" name="_remember_me"> Remember me
+								            </label>
+								        </div>
+								    #}
 
 		{# <button class="btn btn-lg btn-primary" type="submit">
-						        Sign in
-						    </button> #}
+								        Sign in
+								    </button> #}
 	</form>
 {% endblock %}
