--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -11,11 +11,12 @@
 			{% else %}
 				<a href="{{ path('app_login')}}">Se connecter</a>
 				<a href="{{ path('app_how_to')}}">Comment ça marche</a>
-
+				<h1>bonjour</h1>
+				<div id='root'></div>	
 
 			{% endif %}
 		</nav>
-		<a href="{{ path('app_register')}}">Inscription</a>
+		{# <a href="{{ path('app_register')}}">Inscription</a> #}
 
 	</header>
 
