--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,13 +1,7 @@
 {% extends 'layout.html.twig' %}
 
-{% block title %}Register
-{% endblock %}
 
-{% block body %}
-	{% for flash_error in app.flashes('verify_email_error') %}
-		<div class="alert alert-danger" role="alert">{{ flash_error }}</div>
-	{% endfor %}
-
+{% block innerContent %}
 
 	<section id="inscription">
 
@@ -73,3 +67,4 @@
 
 	</section>
 {% endblock %}
+
