--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,9 +1,9 @@
-{% extends 'base.html.twig' %}
+{% extends 'layout.html.twig' %}
 
-{% block title %}Log in!
-{% endblock %}
 
-{% block body %}
+
+
+{% block innerContent %}
 
 	<form method="post">
 		{% if error %}
@@ -27,7 +27,7 @@
 		{# <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus> #}
 
 		<input
-		type="password" name="pass" id="inputPassword" placeholder="Mot de passe *" size="30" autocomplete="current-password" required/>
+		type="password" name="password" id="inputPassword" placeholder="Mot de passe *" size="30" autocomplete="current-password" required/>
 		{# 
 								    <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required> #}
 
