--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,6 +13,7 @@
 		<link rel="stylesheet" href="{{asset('assets/styles/connexion.css')}}">
 		<link rel="stylesheet" href="{{asset('assets/styles/inscription.css')}}">
 		{# <link rel="stylesheet" href="../../assets/styles/inscription.css"> #}
+		<link rel="stylesheet" href="{{asset('assets/styles/index.css')}}">
 
 
 		{# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
