--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -33,7 +33,7 @@
 			<div>
 				{{ form_widget(registrationForm.password.first) }}
 
-				<img src="icones/mdp_hidden.svg" alt="oeilferme">
+				<img src="assets/icones/mdp_hidden.svg" alt="oeilferme">
 			</div>
 
 			<div class="confmdp">
@@ -42,7 +42,8 @@
 						  'class': ''
 					  }
 					}) }}
-				<img src="icones/mdp_hidden.svg" alt="oeilferme">
+					
+				<img src="assets/icones/mdp_hidden.svg" alt="oeilferme">
 			</div>
 
 			<div class="cgu d-flex">
