--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -55,10 +55,14 @@
                 </td>
             <tr>
             <tr>
-                <th>Membres favoris</th>
+                <th>Prendre un cours</th>
+                {# Ici on transmet l'Id du User en cours dans l'url afin de placer l'Id du receiver dans le ticket au travers du bouton #}
+                <td><a href="{{ path('platon_ticket_create', {user: user.id}) }}">Prendre un cours</a></td>
+            </tr>
+            <tr>
+                <th>Ajouter aux favoris</th>
                 <td></td>
             </tr>
-
         </tbody>
     </table>
 
