commit avant avant-dernier merge

--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -61,7 +61,7 @@
             </tr>
             <tr>
                 <th>Ajouter aux favoris</th>
-                <td></td>
+                <td><a href="{{ path('platon_favoris', {'user': user.id})}}">Favoris</a></td>
             </tr>
         </tbody>
     </table>
